Core module compatible with Java SE. Requires to define your own storage implementation. StoreBox Classic API is not changed (passes same tests). The SharedPreferences storage engine is implemented by default in Android module. Console version has problem passing test.

--- a/examples/ormlite-cli/build.gradle
+++ b/examples/ormlite-cli/build.gradle
@@ -8,5 +8,5 @@ sourceCompatibility = '1.7'
 targetCompatibility = '1.7'
 
 dependencies {
-    compile 'net.jodah:typetools:0.4.6'
+    compile project(':storebox-lib')
 }
