--- a/storebox-harness/build.gradle
+++ b/storebox-harness/build.gradle
@@ -14,7 +14,7 @@ android {
         
         versionCode 1
         versionName project.versionName
-        
+
         testInstrumentationRunner 'net.orange_box.storebox.harness.CustomInstrumentationTestRunner'
     }
 
@@ -45,7 +45,7 @@ android {
 }
 
 dependencies {
-    compile project(':storebox-lib')
+    compile project(':storebox-android')
     
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.google.code.gson:gson:2.6.2'
@@ -57,7 +57,7 @@ dependencies {
 
 // https://github.com/dam5s/android-example-kotlin/issues/1
 buildscript {
-    ext.kotlin_version = '1.0.1'
+    ext.kotlin_version = '1.0.4'
     
     repositories {
         jcenter()
