--- a/storebox-lib/build.gradle
+++ b/storebox-lib/build.gradle
@@ -4,8 +4,10 @@ repositories {
     mavenCentral()
 }
 
-sourceCompatibility = '1.7'
-targetCompatibility = '1.7'
+compileJava {
+    sourceCompatibility = '1.7'
+    targetCompatibility = '1.7'
+}
 
 dependencies {
     compile 'net.jodah:typetools:0.4.6'
